--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.7.1",
+    "@algolia/autocomplete-theme-classic": "^1.7.1",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "algoliasearch": "^4.13.1",
     "framer-motion": "^6.3.16",
     "next": "12.2.0",
     "next-pwa": "^5.5.4",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-instantsearch-hooks-web": "^6.30.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
